# lvmsky

./: .gitignore  LICENSE  README.md  testing
notebooks/: Inspect_5800_jump.ipynb  Inspect_sky_metrics_based_on_per_fiber_table.ipynb  Which_sky_metrics_use.ipynb  collect_fiber_OI_values.py  collect_fiber_metrics.py  create_geocoronal_skybusyweek_Dec2024.ipynb  make_lvm_skylines_table.ipynb  plots_skybusyweek_3times.ipynb  plots_skybusyweek_fitting.ipynb  saved_dictionary_geocoronal_v4.fits  saved_dictionary_geocoronal_v5.fits  skysub_metrics.ipynb
notebooks/geocoronal_files/: darkest_WHAM_list.csv  geocoronal_lib.py  lco_extinction.txt  readme.txt  shadow_height_lib.py
notebooks/solar_spectra/: r.UVES.2004-09-26T22:19:08.058_0007.fits
skycorr/: Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac
skycorr/config/: template_parameter_file.par
skycorr/doc/: Makefile.am  Makefile.in  SC_UM_acronyms.tex  SC_UM_evaluation.tex  SC_UM_installation.tex  SC_UM_introduction.tex  SC_UM_method.tex  SC_UM_running.tex  SC_UM_shortcut.tex  skycorr_user_manual.tex  subfiles.mk
skycorr/doc/figures/: N4594-SINFO-J_comp.eps  TEST-SINFO-H_comp.eps  TEST-SINFO-J_comp.eps  refl_buttons.eps  refl_buttons.psd  run_button.eps  varclasses.eps
skycorr/examples/: Makefile.am  Makefile.in
skycorr/examples/config/: XPL_d0h_NIR.par  XPL_d0h_NIR.par.in  XPL_d0h_UVB.par  XPL_d0h_UVB.par.in  XPL_d0h_VIS.par  XPL_d0h_VIS.par.in  XPL_d2h_NIR.par  XPL_d2h_NIR.par.in  XPL_d2h_UVB.par  XPL_d2h_UVB.par.in  XPL_d2h_VIS.par  XPL_d2h_VIS.par.in  sctest_fors_1.par  sctest_fors_1.par.in  sctest_fors_1_N4594.par  sctest_fors_1_N4594.par.in  sctest_sinfo_H.par  sctest_sinfo_H.par.in  sctest_sinfo_H_N4594.par  sctest_sinfo_H_N4594.par.in  sctest_sinfo_J.par  sctest_sinfo_J.par.in  sctest_sinfo_J_N4594.par  sctest_sinfo_J_N4594.par.in  sctest_sinfo_K.par  sctest_sinfo_K.par.in  sctest_xshoo_1.par  sctest_xshoo_1.par.in  sctest_xshoo_1_N4594.par  sctest_xshoo_1_N4594.par.in
skycorr/examples/data/: NGC4594-FORS_1.fits  NGC4594-Sinfoni_H.fits  NGC4594-Sinfoni_J.fits  NGC4594-Xshooter_1.fits  SCI_SLIT_MERGE1D_1h_NIR.fits  SCI_SLIT_MERGE1D_1h_NIR_ref.fits  SCI_SLIT_MERGE1D_1h_UVB.fits  SCI_SLIT_MERGE1D_1h_UVB_ref.fits  SCI_SLIT_MERGE1D_1h_VIS.fits  SCI_SLIT_MERGE1D_1h_VIS_ref.fits  SKY_SLIT_MERGE1D_1h_NIR.fits  SKY_SLIT_MERGE1D_1h_UVB.fits  SKY_SLIT_MERGE1D_1h_VIS.fits  SKY_SLIT_MERGE1D_3h_NIR.fits  SKY_SLIT_MERGE1D_3h_UVB.fits  SKY_SLIT_MERGE1D_3h_VIS.fits  sky_fors_0918.fits  sky_fors_0919.fits  sky_sinfo_1.fits  sky_sinfo_4.fits  sky_sinfo_5.fits  sky_sinfo_6.fits  sky_sinfo_7.fits  sky_xshoo_28.fits  sky_xshoo_29.fits
skycorr/gui/: Makefile.am  Makefile.in  SM02GUI_skycor_main.py
skycorr/m4macros/: cpl.m4
skycorr/reflex/: Makefile.am  Makefile.in  create_sc_parfile.sh  skycorr_reflex.xml.in
skycorr/scripts/: install_package.sh  skycorr_installer.run
skycorr/src/: Makefile.am  Makefile.in  extract1d.c  sc_basic.c  sc_basic.h  sc_contsub.c  sc_contsub.h  sc_conv.c  sc_conv.h  sc_fwhmest.c  sc_fwhmest.h  sc_lines.c  sc_lines.h  sc_modsky.c  sc_modsky.h  sc_mpfit.c  sc_mpfit.h  sc_par.c  sc_par.h  sc_plot.c  sc_plot.h  sc_readspec.c  sc_readspec.h  sc_skycorr.c  sc_skycorr.h  sc_specdiss.c  sc_specdiss.h  sc_weights.c  sc_weights.h  skycorr.c
skycorr/src/test/: Makefile.am  Makefile.in  test_sc_basic.c  test_sc_contsub.c  test_sc_fwhmest.c  test_sc_interpollin.c  test_sc_par.c  test_sc_plot.c  test_sc_skycorr.c  test_sc_specdiss.c
skycorr/src/test/config/: sctest_sinfo_H.par
skycorr/src/test/data/: sky_sinfo_2.fits
skycorr/sysdata/: Makefile.am  Makefile.in  solflux_monthly_average.txt
skymodel/: README.txt  install_SM-01.sh
skymodel/sm-01_mod2/: Makefile.am  SkyModel_Mod2.doxyfile  bootstrap  configure.ac
skymodel/sm-01_mod2/config/: instrument_etc.par  skymodel_etc.par
skymodel/sm-01_mod2/m4macros/: cpl.m4  eso.m4
skymodel/sm-01_mod2/src/: Makefile.am  calcskymodel.c  estmultiscat.c  preplinetrans.c  sm_general.c  sm_general.h  sm_linetrans.c  sm_linetrans.h  sm_run.c  sm_run.h  sm_scatmoonlight.c  sm_scatmoonlight.h  sm_skyemcomp.c  sm_skyemcomp.h  testskymodel.c
skymodel/sm-01_mod2/test/: LBL_A10_s4_R0060000_L.fits  test_radspec.fits  test_skymodel_etc.par  test_transspec.fits
skysub/: GetSolar.py  SkyCalcObs.py  SkyModelObs.py  decomposition_skyLines_groups_and_SkyModel_continuum.ipynb  eso_skymodel_eval.py  eso_skymodel_eval_examples.py  sky_decomp_lineGroups_SkyModel_PALACE_comps.ipynb  sky_lines_by_group_nd.ipynb
telluric/: script_fitting.py
