AUTOMAKE_OPTIONS = 1.8 foreign

ACLOCAL_AMFLAGS = -I m4macros

DISTCLEANFILES = *~

EXTRA_DIST = m4macros/eso.m4 m4macros/cpl.m4 

SUBDIRS = src

# Files to be removed with command: make maintainer-clean
MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.h.in config.log \
        config.status configure stamp-h.in configure.scan autoscan.log \
        admin/config.guess admin/config.sub admin/depcomp admin/install-sh \
        admin/ltmain.sh admin/missing